Bug 1611876 - Specify the stack index for decompilation when reporting null or undefined property access. r=jwalden

Differential Revision: https://phabricator.services.mozilla.com/D61243