js/src/vm/Interpreter.cpp
@@ -36,7 +36,7 @@
 #include "vm/AsyncFunction.h"
 #include "vm/AsyncIteration.h"
 #include "vm/BigIntType.h"
-#include "vm/BytecodeUtil.h"
+#include "vm/BytecodeUtil.h"        // JSDVG_SEARCH_STACK
 #include "vm/EqualityOperations.h"  // js::StrictlyEqual
 #include "vm/GeneratorObject.h"
 #include "vm/Instrumentation.h"
@@ -259,10 +259,11 @@ bool js::GetImportOperation(JSContext* cx, HandleObject envChain,
 }
 
 static bool SetPropertyOperation(JSContext* cx, JSOp op, HandleValue lval,
-                                 HandleId id, HandleValue rval) {
+                                 int lvalIndex, HandleId id, HandleValue rval) {
   MOZ_ASSERT(op == JSOp::SetProp || op == JSOp::StrictSetProp);
 
-  RootedObject obj(cx, ToObjectFromStackForPropertyAccess(cx, lval, id));
+  RootedObject obj(cx,
+                   ToObjectFromStackForPropertyAccess(cx, lval, lvalIndex, id));
   if (!obj) {
     return false;
   }
@@ -1340,11 +1341,11 @@ again:
 #define POP_COPY_TO(v) (v) = *--REGS.sp
 #define POP_RETURN_VALUE() REGS.fp()->setReturnValue(*--REGS.sp)
 
-#define FETCH_OBJECT(cx, n, obj, key)                             \
-  JS_BEGIN_MACRO                                                  \
-    HandleValue val = REGS.stackHandleAt(n);                      \
-    obj = ToObjectFromStackForPropertyAccess((cx), (val), (key)); \
-    if (!(obj)) goto error;                                       \
+#define FETCH_OBJECT(cx, n, obj, key)                                \
+  JS_BEGIN_MACRO                                                     \
+    HandleValue val = REGS.stackHandleAt(n);                         \
+    obj = ToObjectFromStackForPropertyAccess((cx), (val), n, (key)); \
+    if (!(obj)) goto error;                                          \
   JS_END_MACRO
 
 /*
@@ -2790,11 +2791,13 @@ static MOZ_NEVER_INLINE JS_HAZ_JSNATIVE_CALLER bool Interpret(JSContext* cx,
     CASE(StrictSetProp) {
       static_assert(JSOpLength_SetProp == JSOpLength_StrictSetProp,
                     "setprop and strictsetprop must be the same size");
-      HandleValue lval = REGS.stackHandleAt(-2);
+      int lvalIndex = -2;
+      HandleValue lval = REGS.stackHandleAt(lvalIndex);
       HandleValue rval = REGS.stackHandleAt(-1);
 
       ReservedRooted<jsid> id(&rootId0, NameToId(script->getName(REGS.pc)));
-      if (!SetPropertyOperation(cx, JSOp(*REGS.pc), lval, id, rval)) {
+      if (!SetPropertyOperation(cx, JSOp(*REGS.pc), lval, lvalIndex, id,
+                                rval)) {
         goto error;
       }
 
@@ -2827,7 +2830,8 @@ static MOZ_NEVER_INLINE JS_HAZ_JSNATIVE_CALLER bool Interpret(JSContext* cx,
 
     CASE(GetElem)
     CASE(CallElem) {
-      MutableHandleValue lval = REGS.stackHandleAt(-2);
+      int lvalIndex = -2;
+      MutableHandleValue lval = REGS.stackHandleAt(lvalIndex);
       HandleValue rval = REGS.stackHandleAt(-1);
       MutableHandleValue res = REGS.stackHandleAt(-2);
 
@@ -2837,7 +2841,8 @@ static MOZ_NEVER_INLINE JS_HAZ_JSNATIVE_CALLER bool Interpret(JSContext* cx,
       }
 
       if (!done) {
-        if (!GetElementOperation(cx, JSOp(*REGS.pc), lval, rval, res)) {
+        if (!GetElementOperationWithStackIndex(cx, JSOp(*REGS.pc), lval,
+                                               lvalIndex, rval, res)) {
           goto error;
         }
       }
@@ -2871,9 +2876,10 @@ static MOZ_NEVER_INLINE JS_HAZ_JSNATIVE_CALLER bool Interpret(JSContext* cx,
     CASE(StrictSetElem) {
       static_assert(JSOpLength_SetElem == JSOpLength_StrictSetElem,
                     "setelem and strictsetelem must be the same size");
-      HandleValue receiver = REGS.stackHandleAt(-3);
+      int receiverIndex = -3;
+      HandleValue receiver = REGS.stackHandleAt(receiverIndex);
       ReservedRooted<JSObject*> obj(&rootObject0);
-      obj = ToObjectFromStackForPropertyAccess(cx, receiver,
+      obj = ToObjectFromStackForPropertyAccess(cx, receiver, receiverIndex,
                                                REGS.stackHandleAt(-2));
       if (!obj) {
         goto error;
@@ -4433,7 +4439,8 @@ bool js::GetProperty(JSContext* cx, HandleValue v, HandlePropertyName name,
   }
 
   RootedValue receiver(cx, v);
-  RootedObject obj(cx, ToObjectFromStackForPropertyAccess(cx, v, name));
+  RootedObject obj(
+      cx, ToObjectFromStackForPropertyAccess(cx, v, JSDVG_SEARCH_STACK, name));
   if (!obj) {
     return false;
   }
@@ -4708,7 +4715,8 @@ bool js::GetAndClearException(JSContext* cx, MutableHandleValue res) {
 template <bool strict>
 bool js::DeletePropertyJit(JSContext* cx, HandleValue v,
                            HandlePropertyName name, bool* bp) {
-  RootedObject obj(cx, ToObjectFromStackForPropertyAccess(cx, v, name));
+  RootedObject obj(
+      cx, ToObjectFromStackForPropertyAccess(cx, v, JSDVG_SEARCH_STACK, name));
   if (!obj) {
     return false;
   }
@@ -4738,7 +4746,8 @@ template bool js::DeletePropertyJit<false>(JSContext* cx, HandleValue val,
 template <bool strict>
 bool js::DeleteElementJit(JSContext* cx, HandleValue val, HandleValue index,
                           bool* bp) {
-  RootedObject obj(cx, ToObjectFromStackForPropertyAccess(cx, val, index));
+  RootedObject obj(cx, ToObjectFromStackForPropertyAccess(
+                           cx, val, JSDVG_SEARCH_STACK, index));
   if (!obj) {
     return false;
   }
